edition = "2023";

package openhdc.stack.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/openhdc/openhdc/api/stack/v1;v1";

service StackService {
  // Global Configurations
  rpc UpdateNTPServers(UpdateNTPServersRequest) returns (UpdateNTPServersResponse);

  // Package Repository Management
  rpc ListPackageRepositories(ListPackageRepositoriesRequest) returns (ListPackageRepositoriesResponse);
  rpc UpdatePackageRepositories(UpdatePackageRepositoryRequest) returns (PackageRepository);

  // Network Management
  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse);
  rpc CreateNetwork(CreateNetworkRequest) returns (Network);
  rpc UpdateNetwork(UpdateNetworkRequest) returns (Network);
  rpc DeleteNetwork(DeleteNetworkRequest) returns (google.protobuf.Empty);
  rpc UpdateDHCP(UpdateDHCPRequest) returns (VLAN);
  rpc UpdateIPRange(UpdateIPRangeRequest) returns (Subnet);

  // Machine Operations
  rpc ImportBootResources(ImportBootResourcesRequest) returns (google.protobuf.Empty);
  rpc PowerOnMachine(PowerOnMachineRequest) returns (Machine);
  rpc PowerOffMachine(PowerOffMachineRequest) returns (Machine);
  rpc CommissionMachine(CommissionMachineRequest) returns (Machine);
  rpc OverrideMachineFailedTest(OverrideMachineFailedTestRequest) returns (Machine);
}

message PackageRepository {}

message Network {}

message VLAN {
  bool dhcp_on = 1;
}

message Fabric {
  repeated VLAN vlans = 1;
}

message Subnet {}

message Machine {}

message UpdateNTPServersRequest {
  string ntp_servers = 1;
}

message UpdateNTPServersResponse {
  string ntp_servers = 1;
}

message UpdatePackageRepositoryRequest {}

message ListPackageRepositoriesRequest {}

message ListPackageRepositoriesResponse {}

message ListNetworksRequest {}

message ListNetworksResponse {}

message CreateNetworkRequest {}

message UpdateNetworkRequest {}

message DeleteNetworkRequest {}

message UpdateDHCPRequest {}

message UpdateIPRangeRequest {}

message ImportBootResourcesRequest {}

message PowerOnMachineRequest {}

message PowerOffMachineRequest {}

message CommissionMachineRequest {}

message OverrideMachineFailedTestRequest {}
